<resources>
    <string name="app_name">ZeroMobi</string>
    <string name="btn_login"><![CDATA[Entrar >]]></string>
    <string name="password_label">Senha</string>
    <string name="informe_seu">Informe seu destino</string>
    <string name="origem">Origem</string>
    <string name="city_map">city map</string>
    <string name="usar_localiza">Usar localização</string>
    <string name="destino">Destino</string>
    <string name="zeromobi">Zeromobi S</string>
    <string name="category_title">Categoria</string>
    <string name="common_text">Comum</string>
    <string name="shared_text">Compartilhado</string>
    <string name="common_value">R$ 15,00</string>
    <string name="premium_value">R$ 20,00</string>
    <string name="shared_value">R$ 13,00</string>
    <string name="localizaOrigem">200-220, Av Ipiranga,República</string>
    <string name="localizaDestino">200-198, Av.Paulista São Paulo</string>
    <string name="solicitar"><![CDATA[Solicitar >]]></string>
    <string name="confirmar"><![CDATA[Confirmar >]]></string>
</resources>